- Refacto: renommage de la classe GenericXMLBlockType en AnyXMLType
- Refacto: refonte majeur des classes de métadonnées en utilisant la réflexion pour faciliter la maintenance et la création d'autres, notamment des sous-types de ComplexListType
- Fix: AgencyType étendu avec OrganisationDescriptiveMetadata
- Fix: défini le champ FormatId même quand DROID n'arrive pas a l'identifier -> valeur UNKNOWN

============================================================================
Evolutions/Corrections en 1.2.0

- Evolution: ajout de l'import de métadonnées sous la forme csv

============================================================================
Evolutions/Corrections en 1.1.0

- Evolution: Mise à jour des bibliothèques java utilisées
- Evolution: Les patterns de fichiers ignorés sont appliqués à tous les fichiers ce qui permet d'exclure les liens (*.lnk)
- Bug (corrigé): Vérification que la cible d'un lien est dans le périmère d'import
- Bug (corrigé): Import du fichier ManagementMetadata lors d'un import depuis une hiérarchie disque
- Evolution: accès possible à l'ArchiveTransfer depuis SIPBuilder

============================================================================
Evolutions/Corrections -> 1.0

- Evolution: l'encodage de l'usage_version dans les noms de fichier sur disque a été modifié il est maintenant __usage(_version)__nomdefichier pour éviter les problèmes avec certains fichiers commencant par "nombre_". Cas rencontré sur le jeu de test Mercier.
- Evolution: reconnait des fichiers manifest SEDA dans les SIP et DIP nommés de manière étendue (.*manifest.*.xml)
- Bug (corrigé): le champ DateCreatedByApplication a été mis comme il se doit dans FileInfo
- Bug (corrigé): remplacement des PersonOrEntityType par AgentType
- Bug (corrigé): correction de l'interprétation de différents champs SEDA
- Bug (corrigé): la fonction toString du GenericXMLBlockType donne le contenu XML et non le toString par défaut d'un Object