@@ -8,6 +8,9 @@ Evolutions/Corrections en 1.3.0
 - Refacto: refonte majeur des classes de métadonnées en utilisant la réflexion pour faciliter la maintenance et la création d'autres, notamment des sous-types de ComplexListType
 - Fix: AgencyType étendu avec OrganisationDescriptiveMetadata
 - Fix: défini le champ FormatId même quand DROID n'arrive pas a l'identifier -> valeur UNKNOWN
+- Fix: lecture et écriture des attributs
+- Evolution: ajout de la métadonnée RelatedObjectReference et de différentes métadonnées primitives (DigestType...)
+- Evolution: renforcement des tests avec le SIP de référence SIP_OK.zip et sur toutes les métadonnées
 
 ============================================================================
 Evolutions/Corrections en 1.2.0
